--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 h1,h2,h3,h4,h5,h6,p {margin: 0;}
+a {text-decoration: none; color: inherit}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -14,6 +15,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+header {
+  padding: 10px;
+  background: #ca371d;
+}
+
+
 
 .App {
   padding: 10px;
@@ -49,3 +57,10 @@ code {
   }
 }
 
+
+footer {
+  margin-top: 10px;
+  padding: 10px;
+  background: #ca371d;
+  text-align: center;
+}
