--- a/src/index.scss
+++ b/src/index.scss
@@ -17,17 +17,31 @@ code {
 }
 
 header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding: 10px;
   background: #ca371d;
+  text-align: center;
+  a {
+    font-weight: 500;
+    margin-right: 20px;
+    &:last-child{margin-right: 0}
+    transition: all .2s ease;
+    &:hover {
+      color: #222;
+    }
+  }
 }
 
 
 
 .App {
+  min-height: calc(100vh - 62px - 62px);
   padding: 10px;
   max-width: 500px;
   margin: 0 auto;
-  h1 { text-align: center; margin-bottom: 10px;}
+  h2 { text-align: center; margin-bottom: 10px;}
 
   .input_div {
     display: flex;
