--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 h1,h2,h3,h4,h5,h6,p {margin: 0;}
 a {text-decoration: none; color: inherit}
+input {outline: none;}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -16,6 +17,7 @@ code {
     monospace;
 }
 
+
 header {
   display: flex;
   align-items: center;
@@ -26,7 +28,6 @@ header {
   a {
     font-weight: 500;
     margin-right: 20px;
-    &:last-child{margin-right: 0}
     transition: all .2s ease;
     &:hover {
       color: #222;
@@ -77,4 +78,9 @@ footer {
   padding: 10px;
   background: #ca371d;
   text-align: center;
+  a {
+    font-weight: 500;
+    transition: all .2s ease;
+    &:hover { color: #222 }
+  }
 }
