--- a/src/index.scss
+++ b/src/index.scss
@@ -38,19 +38,25 @@ header {
 
 
 .App {
-  min-height: calc(100vh - 62px - 62px);
+  min-height: calc(100vh - 66px - 66px);
   padding: 10px;
   max-width: 500px;
   margin: 0 auto;
   h2 { text-align: center; margin-bottom: 10px;}
 
   .input_div {
+    margin: 10px;
     display: flex;
     flex-direction: column;
     text-align: center;
     align-items: center;
     input {margin-bottom: 10px}
     button { width: 120px;}
+    textarea {
+      width: 300px;
+      height: 50px;
+      margin-bottom: 15px;
+    }
   }
   .reviews {
     margin-top: 20px;
@@ -61,7 +67,7 @@ header {
       padding: 10px;
       border-radius: 5px;
       position: relative;
-      p {word-break: break-word;}
+      p {word-break: break-word; font-size: 14px; margin-top: 5px;}
       button {
         position: absolute;
         top: 5px;
@@ -77,10 +83,14 @@ footer {
   margin-top: 10px;
   padding: 10px;
   background: #ca371d;
-  text-align: center;
   a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 5px;
     font-weight: 500;
     transition: all .2s ease;
-    &:hover { color: #222 }
+    &:hover { color: #0d2636 }
+    img {margin-left: 5px;}
   }
 }
