--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+*{box-sizing: border-box;}
 h1,h2,h3,h4,h5,h6,p {margin: 0;}
 a {text-decoration: none; color: inherit}
 input {outline: none;}
@@ -38,7 +39,7 @@ header {
 
 
 .App {
-  min-height: calc(100vh - 66px - 66px);
+  min-height: calc(100vh - 56px - 56px);
   padding: 10px;
   max-width: 500px;
   margin: 0 auto;
@@ -54,15 +55,16 @@ header {
     button { width: 120px;}
     textarea {
       width: 300px;
-      height: 50px;
       margin-bottom: 15px;
+      resize: vertical; max-height: 220px; min-height: 70px;
     }
   }
   .reviews {
     margin-top: 20px;
     &_item {
       background-color: #333;
-      margin-bottom: 10px;
+      // box-shadow: -2px 2px 5px 0px rgba(255, 255, 255, 0.2);
+      margin-bottom: 15px;
       border: 2px solid rgb(223, 55, 55);
       padding: 10px;
       border-radius: 5px;
@@ -72,8 +74,18 @@ header {
         position: absolute;
         top: 5px;
         right: 5px;
+        border: none;
+        background: none;
+        color: white;
+        font-size: 18px;
+        cursor: pointer;
+        transition: all .2s ease;
+        &:hover {
+          color: rgb(223, 55, 55);
+
+        }
       }
-      input {width: 98.3%; margin-top: 10px;}
+      input {width: 100%; margin-top: 10px;}
     }
   }
 }
