--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #222;
+  // background: #222;
+  // background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  // background: linear-gradient(29deg, rgba(33,4,42,1) 44%, rgba(51,51,51,1) 100%);
+  background: linear-gradient(90deg, rgba(4,42,40,1) 35%, rgb(42, 1, 1) 100%);
   color: white;
 }
 
@@ -23,9 +26,14 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
-  background: #ca371d;
+  padding: 8px 10px;
+  // background: #ca1d1d;
+  // background: rgb(11, 125, 121);
+  background: #ca1d1d;
+  // background: linear-gradient(90deg,rgb(74, 2, 2) 20%, rgb(9, 92, 88) 100%);
   text-align: center;
+  box-shadow: 4px 4px 6px rgba(90, 90, 90, 0.2);
+
   a {
     font-weight: 500;
     margin-right: 20px;
@@ -37,9 +45,46 @@ header {
 }
 
 
+input {
+  margin-bottom: 10px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1.5px solid #ffffff;
+  height: 2rem;
+  color: white;
+  font-size: 14px;
+  transition: all .5s ease;
+  
+  &:focus {border-bottom: 1.5px solid #ca1d1d;}
+}
+button {
+  width: 100px;
+  background: #5a35ee;
+  border: 1px solid white;
+  color: white;
+  height: 30px;
+  border-radius: 7px;
+  transition: all .2s ease;
+  &:hover {
+    background: #5130d6
+  }
+}
+textarea {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  border: none;
+  outline-color: #5a35ee;
+  padding: 5px;
+  color: #222;
+  background: #fff;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
 
 .App {
-  min-height: calc(100vh - 56px - 56px);
+  min-height: calc(100vh - 54px - 54px);
   padding: 10px;
   max-width: 500px;
   margin: 0 auto;
@@ -51,8 +96,6 @@ header {
     flex-direction: column;
     text-align: center;
     align-items: center;
-    input {margin-bottom: 10px}
-    button { width: 120px;}
     textarea {
       width: 300px;
       margin-bottom: 15px;
@@ -62,30 +105,29 @@ header {
   .reviews {
     margin-top: 20px;
     &_item {
+      border-left: 3px solid #f44336;
+      border-top: 3px solid #f44336;
+      box-shadow: 4px 4px 6px rgb(0 0 0 / 20%);
       background-color: #333;
-      // box-shadow: -2px 2px 5px 0px rgba(255, 255, 255, 0.2);
       margin-bottom: 15px;
-      border: 2px solid rgb(223, 55, 55);
       padding: 10px;
-      border-radius: 5px;
+      border-radius: 10px;
       position: relative;
       p {word-break: break-word; font-size: 14px; margin-top: 5px;}
       button {
         position: absolute;
-        top: 5px;
-        right: 5px;
+        top: 2px;
+        right: 2px;
+        width: auto;
         border: none;
         background: none;
         color: white;
         font-size: 18px;
         cursor: pointer;
         transition: all .2s ease;
-        &:hover {
-          color: rgb(223, 55, 55);
-
-        }
+        &:hover { color: rgb(223, 55, 55) }
       }
-      input {width: 100%; margin-top: 10px;}
+      input {width: 100%; margin: 10px 0 0;}
     }
   }
 }
@@ -93,8 +135,8 @@ header {
 
 footer {
   margin-top: 10px;
-  padding: 10px;
-  background: #ca371d;
+  padding: 7px;
+  background: #141414;
   a {
     display: flex;
     align-items: center;
@@ -102,7 +144,8 @@ footer {
     margin-right: 5px;
     font-weight: 500;
     transition: all .2s ease;
-    &:hover { color: #0d2636 }
+    &:hover { color: #a8a8a8; svg { fill: #a8a8a8} }
     img {margin-left: 5px;}
+    
   }
 }
