--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,8 @@ body {
   // background: #222;
   // background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
   // background: linear-gradient(29deg, rgba(33,4,42,1) 44%, rgba(51,51,51,1) 100%);
-  background: linear-gradient(90deg, rgba(4,42,40,1) 35%, rgb(42, 1, 1) 100%);
+  // background: linear-gradient(90deg, rgba(4,42,40,1) 25%, rgb(42, 1, 1) 100%);
+  background: linear-gradient(135deg, rgb(4, 42, 40) 10%, rgb(42, 1, 1) 100%);
   color: white;
 }
 
@@ -59,27 +60,34 @@ input {
 }
 button {
   width: 100px;
-  background: #5a35ee;
-  border: 1px solid white;
+  background: #333;
+  border: none;
+  // border: 1px solid white;
+  outline: none;
   color: white;
   height: 30px;
   border-radius: 7px;
   transition: all .2s ease;
   &:hover {
-    background: #5130d6
+    background: #ca1d1d;
+    transform: scale(1.05);
   }
 }
 textarea {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  border: none;
-  outline-color: #5a35ee;
+    background: transparent !important;
+    color: white !important;
+  border: 1.5px solid white;
+  outline-color: #ca1d1d;
   padding: 5px;
   color: #222;
   background: #fff;
   border-radius: 5px;
   font-size: 14px;
+  transition: all .2s ease;
+  &:focus{ background: white !important; color: #222 !important}
 }
 
 
@@ -101,6 +109,9 @@ textarea {
       margin-bottom: 15px;
       resize: vertical; max-height: 220px; min-height: 70px;
     }
+    input[type="password"] + button {
+      margin-top: 12px;
+    }
   }
   .reviews {
     margin-top: 20px;
@@ -113,7 +124,15 @@ textarea {
       padding: 10px;
       border-radius: 10px;
       position: relative;
-      p {word-break: break-word; font-size: 14px; margin-top: 5px;}
+      p {
+        word-break: break-word;
+        font-size: 14px; 
+        margin-top: 5px;
+        span {
+          font-weight: 700;
+          color:#f44336;
+        }
+      }
       button {
         position: absolute;
         top: 2px;
