--- a/src/index.scss
+++ b/src/index.scss
@@ -46,6 +46,8 @@ header {
 }
 
 
+
+
 input {
   margin-bottom: 10px;
   background-color: transparent;
@@ -57,21 +59,6 @@ input {
   transition: all .5s ease;
   
   &:focus {border-bottom: 1.5px solid #ca1d1d;}
-}
-button {
-  width: 100px;
-  background: #333;
-  border: none;
-  // border: 1px solid white;
-  outline: none;
-  color: white;
-  height: 30px;
-  border-radius: 7px;
-  transition: all .2s ease;
-  &:hover {
-    background: #ca1d1d;
-    transform: scale(1.05);
-  }
 }
 textarea {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -89,14 +76,41 @@ textarea {
   transition: all .2s ease;
   &:focus{ background: white !important; color: #222 !important}
 }
+button {
+  width: 100px;
+  background: #333;
+  border: none;
+  // border: 1px solid white;
+  outline: none;
+  color: white;
+  height: 30px;
+  border-radius: 7px;
+  transition: all .2s ease;
+  &:hover {
+    background: #ca1d1d;
+    transform: scale(1.05);
+  }
+}
 
 
 .App {
   min-height: calc(100vh - 54px - 54px);
   padding: 10px;
-  max-width: 500px;
+  max-width: 900px;
   margin: 0 auto;
-  h2 { text-align: center; margin-bottom: 10px;}
+
+  main {
+    display: flex;
+    justify-content: center;
+    & .input_div {
+      width: 30%;
+      padding-right: 2%;
+    }
+    .reviews {
+      width: 60%;
+    }
+  }
+  h4,h2 { text-align: center; margin-bottom: 10px;}
 
   .input_div {
     margin: 10px;
@@ -105,7 +119,7 @@ textarea {
     text-align: center;
     align-items: center;
     textarea {
-      width: 300px;
+      width: 100%;
       margin-bottom: 15px;
       resize: vertical; max-height: 220px; min-height: 70px;
     }
@@ -166,5 +180,16 @@ footer {
     &:hover { color: #a8a8a8; svg { fill: #a8a8a8} }
     img {margin-left: 5px;}
     
+  }
+}
+
+
+@media (max-width: 690px) {
+  main {
+    flex-direction: column;
+    align-items: center;
+    .input_div, .reviews {
+      width: unset !important;
+    }
   }
 }
