login page receives correct messages

--- a/src/index.scss
+++ b/src/index.scss
@@ -110,7 +110,7 @@ button {
       width: 60%;
     }
   }
-  h4,h2 { text-align: center; margin-bottom: 10px;}
+  h4,h3,h2 { text-align: center; margin-bottom: 10px;}
 
   .input_div {
     margin: 10px;
